--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,14 @@ before_install:
 script:
   - docker run -e CI=true kimst214/docker-react-app  npm run test -- --coverage
 
-after_success:
-  - echo "Test success"
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-northeast-2"
+  app: "docker-react-app"
+  env: "Dockerreactapp-env-1"
+  bucket_name: "elasticbeanstalk-ap-northeast-2-629925613314"
+  butket_path: "docker-react-app"
+  on:
+    branch: master
+access_key_id: $AWS_ACCESS_KEY    
+aws_secret_access_key: $AWS_SECRET_ACCESS_KEY  
