--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ script:
   - docker run -e CI=true kimst214/docker-react-app  npm run test -- --coverage
 
 deploy:
+  edge: true
   provider: elasticbeanstalk
   region: "ap-northeast-2"
   app: "docker-react-app"
