--- a/.travis.yml
+++ b/.travis.yml
@@ -6,21 +6,22 @@ services:
   - docker
 
 before_install:
-  - echo "start!@@"
-  - docker build -t kimst214/docker-react-app -f Dockerfile.dev .
+  - echo "start creating an image with dockerfile"
+  - docker build -t johnahn/docker-react-app -f Dockerfile.dev .
 
-script:
-  - docker run -e CI=true kimst214/docker-react-app  npm run test -- --coverage
+script: 
+  - docker run -e CI=true johnahn/docker-react-app npm run test -- --coverage
 
 deploy:
   edge: true
   provider: elasticbeanstalk
-  region: "ap-northeast-2"
-  app: "docker-react-app"
-  env: "Dockerreactapp-env-1"
-  bucket_name: "elasticbeanstalk-ap-northeast-2-629925613314"
-  butket_path: "docker-react-app"
+  region: ap-northeast-2
+  app: docker-react-app
+  env: DockerReactApp-env
+  bucket_name: elasticbeanstalk-ap-northeast-2-629925613314
+
+  bucket_path: docker-react-app
   on:
-    branch: master
+    branch: main
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_ACCESS_KEY
